# mydisease-mcp

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: configure_claude.py
src/mydisease_mcp/: __init__.py  client.py  server.py
src/mydisease_mcp/tools/: __init__.py  _query_utils.py  annotation.py  batch.py  clinical.py  drug.py  epidemiology.py  export.py  gene_association.py  gwas.py  mapping.py  metadata.py  ontology.py  pathway.py  phenotype.py  query.py  variant.py
tests/: conftest.py  test_annotation_tools.py  test_batch_tools.py  test_client.py  test_clinical_tools.py  test_drug_tools.py  test_epidemiology_tools.py  test_export_tools.py  test_gene_association_tools.py  test_gwas_tools.py  test_mapping_tools.py  test_metadata_tools.py  test_ontology_tools.py  test_pathway_tools.py  test_phenotype_tools.py  test_query_tools.py  test_query_utils.py  test_variant_tools.py
