[project]
name = "mydisease-mcp"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "fastmcp==2.14.5",
    "httpx",
    "pydantic",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
